--- a/check_data.ipynb
+++ b/check_data.ipynb
@@ -136,6 +136,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b12eb011",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "e38c9cca",
    "metadata": {
@@ -143,174 +151,127 @@
    },
    "outputs": [],
    "source": [
-    "path = '/home/tungi/datasets/mf_individuals/m--20181017--0000--002914589--GHS/tracked_mesh/E001_Neutral_Eyes_Open/043609.bin'\n",
-    "verts = np.fromfile(path, dtype=np.float32)"
+    "[0.7268878 0.045365512 0.6852562 -740.1184\n",
+    "0.06507141 0.9887769 -0.13448398 156.47725\n",
+    "-0.68366647 0.14234535 0.7157779 376.51572]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "dcb1e45a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -56.2951,  -18.1722,  -58.732 , ...,   17.5283,  -77.7074,\n",
-       "       -121.731 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "verts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "16218c04",
+   "execution_count": 11,
+   "id": "9835ab74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_obj(filename):\n",
-    "    vertices = []\n",
-    "    faces_vertex, faces_uv = [], []\n",
-    "    uvs = []\n",
-    "    with open(filename, \"r\") as f:\n",
-    "        for s in f:\n",
-    "            l = s.strip()\n",
-    "            if len(l) == 0:\n",
-    "                continue\n",
-    "            parts = l.split(\" \")\n",
-    "            if parts[0] == \"vt\":\n",
-    "                uvs.append([float(x) for x in parts[1:]])\n",
-    "            elif parts[0] == \"v\":\n",
-    "                vertices.append([float(x) for x in parts[1:]])\n",
-    "            elif parts[0] == \"f\":\n",
-    "                faces_vertex.append([int(x.split(\"/\")[0]) for x in parts[1:]])\n",
-    "                faces_uv.append([int(x.split(\"/\")[1]) for x in parts[1:]])\n",
-    "    # make sure triangle ids are 0 indexed\n",
-    "    obj = {\n",
-    "        \"verts\": np.array(vertices, dtype=np.float32),\n",
-    "        \"uvs\": np.array(uvs, dtype=np.float32),\n",
-    "        \"vert_ids\": np.array(faces_vertex, dtype=np.int32) - 1,\n",
-    "        \"uv_ids\": np.array(faces_uv, dtype=np.int32) - 1,\n",
-    "    }\n",
-    "    return obj\n",
-    "\n",
-    "path = '/home/tungi/datasets/mf_individuals/m--20181017--0000--002914589--GHS/tracked_mesh/E001_Neutral_Eyes_Open/043609.obj'\n",
-    "obj = load_obj(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5dfed27b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'verts': array([[-2.2360569e+01,  3.4165901e+01,  1.0358450e+03],\n",
-       "        [ 8.0549240e-01,  8.3542343e+01,  9.7901019e+02],\n",
-       "        [ 1.9940479e+01,  8.1181488e+01,  9.4747009e+02],\n",
-       "        ...,\n",
-       "        [ 6.6460403e+01,  9.4502159e+01,  1.0997854e+03],\n",
-       "        [ 5.7878895e+01,  9.0312721e+01,  1.1053351e+03],\n",
-       "        [ 4.4348778e+01,  9.1468178e+01,  1.1081604e+03]], dtype=float32),\n",
-       " 'uvs': array([[0.3518, 0.4916],\n",
-       "        [0.3586, 0.5064],\n",
-       "        [0.3471, 0.5128],\n",
-       "        ...,\n",
-       "        [0.6662, 0.6382],\n",
-       "        [0.6761, 0.6513],\n",
-       "        [0.6772, 0.6545]], dtype=float32),\n",
-       " 'vert_ids': array([[1943,   76, 1114],\n",
-       "        [1943, 1114, 1972],\n",
-       "        [1117,    5,    3],\n",
-       "        ...,\n",
-       "        [6388, 6389, 6390],\n",
-       "        [6388, 6390, 6391],\n",
-       "        [6388, 6391, 6392]], dtype=int32),\n",
-       " 'uv_ids': array([[    0,     1,     2],\n",
-       "        [    3,     4,     5],\n",
-       "        [    6,     7,     8],\n",
-       "        ...,\n",
-       "        [32799, 32800, 32801],\n",
-       "        [32802, 32803, 32804],\n",
-       "        [32805, 32806, 32807]], dtype=int32)}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c1a549dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'verts': array([[ -27.849365 ,   35.130695 , 1032.6465   ],\n",
-       "        [  -5.0292244,   85.39142  ,  977.1414   ],\n",
-       "        [  13.862484 ,   84.434975 ,  946.2529   ],\n",
-       "        ...,\n",
-       "        [  61.9071   ,   94.13186  , 1098.1984   ],\n",
-       "        [  53.27032  ,   89.97517  , 1103.6316   ],\n",
-       "        [  39.824913 ,   91.22518  , 1106.4023   ]], dtype=float32),\n",
-       " 'uvs': array([[0.3518, 0.4916],\n",
-       "        [0.3586, 0.5064],\n",
-       "        [0.3471, 0.5128],\n",
-       "        ...,\n",
-       "        [0.6662, 0.6382],\n",
-       "        [0.6761, 0.6513],\n",
-       "        [0.6772, 0.6545]], dtype=float32),\n",
-       " 'vert_ids': array([[1943,   76, 1114],\n",
-       "        [1943, 1114, 1972],\n",
-       "        [1117,    5,    3],\n",
-       "        ...,\n",
-       "        [6388, 6389, 6390],\n",
-       "        [6388, 6390, 6391],\n",
-       "        [6388, 6391, 6392]], dtype=int32),\n",
-       " 'uv_ids': array([[    0,     1,     2],\n",
-       "        [    3,     4,     5],\n",
-       "        [    6,     7,     8],\n",
-       "        ...,\n",
-       "        [32799, 32800, 32801],\n",
-       "        [32802, 32803, 32804],\n",
-       "        [32805, 32806, 32807]], dtype=int32)}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path = '/home/tungi/datasets/mf_individuals/m--20181017--0000--002914589--GHS/tracked_mesh/E004_Relaxed_Mouth_Open/044531.obj'\n",
-    "obj = load_obj(path)\n",
-    "obj"
+    "from pytorch3d.renderer import (\n",
+    "    look_at_view_transform\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87264c48",
+   "id": "bc60dfe9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def render_path_circle(phi=15, dist=300, n_split=120):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        phi: elevation and azimuth in degree\n",
+    "        dist: distance between the object and the center of the circle\n",
+    "        \n",
+    "    Returns:\n",
+    "        R_traj: Tensor of shape [n_split, 3, 3] giving the rotation matrices along the rendering trajectory\n",
+    "    \"\"\"\n",
+    "    def norm_vec(x):\n",
+    "        return x / np.linalg.norm(x)\n",
+    "    \n",
+    "    theta = np.linspace(0, 2*np.pi, n_split)\n",
+    "    diameter = dist * np.tan(phi * np.pi / 180)\n",
+    "    x = diameter * np.cos(theta)\n",
+    "    y = diameter * np.sin(theta)\n",
+    "    z = np.ones(n_split) * dist\n",
+    "\n",
+    "    R_traj = torch.zeros(n_split, 3, 3)\n",
+    "    for i in range(n_split):\n",
+    "        z_axis = norm_vec(np.array((-x[i], y[i], -z[i])))\n",
+    "        up = np.array([0, 1., 0])\n",
+    "        x_axis = norm_vec(np.cross(up, z_axis))\n",
+    "        y_axis = norm_vec(np.cross(z_axis, x_axis))\n",
+    "        _R = np.hstack((x_axis[:, None], y_axis[:, None], z_axis[:, None]))\n",
+    "        R_traj[i] = torch.FloatTensor(_R)\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "792dfcc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.6428,  0.0000, -0.7660],\n",
+       "         [ 0.0000,  1.0000,  0.0000],\n",
+       "         [ 0.7660,  0.0000, -0.6428]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_cam, T_cam = look_at_view_transform(300, 0, 50)\n",
+    "R_cam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e4919c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[0.7268878 0.045365512 0.6852562 -740.1184\n",
+    "0.06507141 0.9887769 -0.13448398 156.47725\n",
+    "-0.68366647 0.14234535 0.7157779 376.51572]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "606f801c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.6428,  0.0000, -0.7660])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_cam[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ddf71a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.9955 0.0162 0.0923 3.940710067749023438e+01\n",
+    "1.187120005488395691e-02 -9.987679719924926758e-01 4.819040000438690186e-02 1.951469993591308594e+01\n",
+    "9.303469955921173096e-02 -4.688160121440887451e-02 -9.945589900016784668e-01 9.818179931640625000e+02"
+   ]
   }
  ],
  "metadata": {
